# simply-mneme

./: .gitignore  .gitmodules  LICENSE  README.md  pyproject.toml
src/mneme/: __init__.py  ids.py  nous_view.py  types.py
src/mneme/addressable/: __init__.py  entity.py  protocol.py
src/mneme/content/: __init__.py  blob_storage.py  media.py  nous_bridge.py  protocol.py  stored.py
src/mneme/sqlite/: __init__.py  _serde.py  asset_store.py  content_store.py  conversation_store.py  database.py  document_store.py  entity_store.py  mcp_server_store.py  models.py  oauth_store.py  user_store.py
src/mneme/structure/: __init__.py  conversation.py  document.py  mcp_server.py  oauth_connection.py  protocol.py  user.py
tests/: test_nous_bridge.py
