[project]
name = "simply-mneme"
version = "0.1.0"
description = "Storage layer implementing noema's Unified Content Model (UCM)"
requires-python = ">=3.12"
dependencies = [
    "sqlalchemy[asyncio]>=2.0",
    "aiosqlite>=0.20",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mneme"]
